--- a/views/index.html
+++ b/views/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <div id="main" style="width:600px; height:400px;"></div>
+    <div id="disk" style="width:600px; height:400px;"></div>
     <script src="js/mem.js" ></script>
+    <script src="js/disk.js" ></script>
 </body>
 </html>
