添加磁盘使用echarts图

--- a/views/index.html
+++ b/views/index.html
@@ -15,7 +15,7 @@
         <div id="cpuPercent" style="width: 600px;height:600px;float:left; "></div>
         <div id="memPercent" style="width: 600px;height:600px; float:left; "></div>
     </div>
-
+    <div id="disk" style="width: 600px;height:400px; margin: 0 auto"></div>
     <script src="js/memPercent.js" ></script>
     <script src="js/cpuPercent.js" ></script>
     <script src="js/disk.js" ></script>
